--- a/configuration.properties
+++ b/configuration.properties
@@ -4,4 +4,6 @@ student_username=student58@library
 student_password=o3imcY1J
 librarian_username=librarian50@library
 librarian_password=kAbC7Ybl
+invalid_username=hjsd
+invalid_password=bhjsd
 
